# proofofplay

./: .gitignore  README.md  flake.nix  justfile  package-lock.json  package.json  playwright.config.ts
.sqlx/: query-00cc255c8cd9f38cd6d03be36f14dab08b0171b653669ffea53598aac05981bc.json  query-024cc98da37e37a430abda9f3445bef783e365ce04820b12a9f0e387286dc5ec.json  query-146f96e4a75543a1427ae3f4279223d4464db077e90240ec7009a9d7d1f6a4d0.json  query-473821f4676ef89c3b0271bed809af400716b6ef52063f505d543c099a6e3d81.json  (+8 more)
config/: local.example.toml  (+2 more)
crates/nostr_signer/: Cargo.toml
crates/nostr_signer/src/nostr/: core.rs  mod.rs  password_crypto.rs  wasm.rs
crates/server/: .env  Cargo.toml
crates/server/.sqlx/: query-0d9f090e29d8678582e682b2881acb230b49734937f95a2bd2325f8be3f44b83.json  query-2a0ec5506f3de5c8085254833ffdf7a3b5b3909be8f9a8ad0ca00f787e5e0863.json  query-32b56f5c7fb7098546f7a67d3bb6171fb46781c16f2e3e8f6e07715020d2269e.json  query-704391261e500f1c5e462dd3b0320b8a5a72f33741ab80713dbd59620eef7daa.json  query-af5f90926b8eda0357f4d10da61da54c323d00b61c06c7aea697ddfce7df38d8.json  query-cc7c90fd5b0a14545599be6e2a748489050655732da304824de75edcf6ef1128.json  query-cd49a421746a5a74164c6522436e446bfe3914294e49c612841724b2b6d223b6.json  query-cd707825d13c7fe985ef8ba1e938150c05a8bd5742cd425f773ad910aef5f1e6.json  query-d344b5fa510314299a79f2ce3897f598057a53c889a549006d3b3c13724f1aed.json  query-d58abbd92a83bef3a30f1f78ae47a19e8eb9cfae2fc7c77373849b15921a3b6a.json  query-db9f14ec772918c0cdf363e64827e15a729804e04c0e686b75e4fa3174dbe031.json
crates/server/migrations/: 20260320000000_add_username_auth.down.sql  20260320000000_add_username_auth.up.sql  20260321000000_add_replay_verification.down.sql  20260321000000_add_replay_verification.up.sql  20260321035618_add_plays_remaining.down.sql  20260321035618_add_plays_remaining.up.sql  20260321040000_add_plays_expiry.down.sql  20260321040000_add_plays_expiry.up.sql  20260322000000_add_bot_detection.down.sql  20260322000000_add_bot_detection.up.sql  20260322000002_add_bans.down.sql  20260322000002_add_bans.up.sql  20260323000000_add_score_metadata.down.sql  20260323000000_add_score_metadata.up.sql
crates/server/src/: config.rs  daily_tasks.rs  file_utils.rs  invoice_watcher.rs  lib.rs  secrets.rs  startup.rs
crates/server/src/domain/games/: bot_detection.rs  mod.rs  routes.rs  store.rs  verify.rs
crates/server/src/domain/payments/: routes.rs  store.rs
crates/server/src/domain/users/: mod.rs  password.rs  routes.rs  store.rs
crates/server/src/lightning/: lnd.rs  lnurl.rs  mod.rs  service.rs
crates/server/src/routes/: admin.rs  mod.rs  public_ui.rs  ui.rs
crates/server/src/templates/: loader.js  styles.css
crates/server/src/templates/components/: auth.js  auth_modals.rs  game_canvas.js  htmx_auth.js  payment.js  profile.js  profile_modal.rs  replay_viewer.js
crates/server/src/templates/fragments/: leaderboard_rows.rs  payment_status.rs
crates/server/src/templates/layouts/: base.rs  navbar.rs
crates/server/src/templates/pages/: game.rs  home.rs  leaderboard.rs
crates/server/src/templates/static/: sw.js
(+16 files in other folders)
