[package]
name = "server"
version = "0.3.1"
edition = "2021"
repository = "https://github.com/tee8z/5day4cast"

[dependencies]
anyhow = "1.0.72"
argon2 = "0.5"
async-trait = "0.1.85"
axum = { version = "0.8.1", features = [
    "http1",
    "macros",
    "multipart",
    "tokio",
    "tokio",
    "tracing",
    "original-uri",
] }
base64 = "0.22.1"
clap = { version = "4.3.23", features = ["derive", "env"] }
config = "0.14.0"
fern = { version = "0.6.2", features = ["colored"] }
hex = "0.4.3"
hyper = "1.4.0"
log = "0.4.18"
nostr-sdk = { version = "0.38.0" }
openssl = { version = "0.10", features = ["vendored"] }
pem-rfc7468 = { version = "0.7.0", features = ["alloc"] }
rand = "0.8.5"
sha2 = "0.10"
reqwest-middleware = { version = "0.3.3", features = ["json", "rustls-tls"] }
reqwest-retry = { version = "0.6.1" }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.117"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "uuid", "time", "json", "migrate"] }
thiserror = "1.0.62"
time = { version = "0.3.36", features = [
    "formatting",
    "macros",
    "parsing",
    "serde",
] }
tokio = { version = "1.39.2", features = [
    "macros",
    "rt-multi-thread",
    "signal",
] }
toml = "0.8.10"
tower-http = { version = "0.5.2", features = ["cors", "fs"] }
uuid = { version = "1.4.1", features = ["serde", "v4", "v7"] }
maud = { version = "0.26", features = ["axum"] }
game_engine = { path = "../game_engine" }

[package.metadata.cargo-machete]
ignored = ["openssl", "minify-js", "walkdir", "sha2"]

[build-dependencies]
minify-js = "0.6"
walkdir = "2.5"
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
